[gd_scene load_steps=2 format=3 uid="uid://cuqj6smmrohtu"]

[ext_resource type="Script" uid="uid://430y5dqxha4k" path="res://base/scroll.gd" id="1_dj7rp"]

[node name="Scroll" type="Node2D"]
script = ExtResource("1_dj7rp")

[node name="LeftButton" type="Button" parent="."]
offset_left = 7.0
offset_top = 14.0
offset_right = 40.0
offset_bottom = 64.0
text = "←"
flat = true

[node name="RightButton" type="Button" parent="."]
offset_left = 207.0
offset_top = 14.0
offset_right = 240.0
offset_bottom = 64.0
text = "→"
flat = true

[node name="ItemsContainer" type="Node2D" parent="."]

[connection signal="pressed" from="LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="RightButton" to="." method="_on_right_button_pressed"]
